Исправлен класс FilmService